--- a/src/stylemenu.css
+++ b/src/stylemenu.css
@@ -58,27 +58,6 @@ h1{
     background-color: rgba(0, 0, 0, 0.5);
     height: 100%;
     box-shadow: 1px 1px 5px black;
-    display: flex;
-    flex-direction: row-reverse;
-    padding: 30px;
-    gap: 2em;
-}
-
-.info img{
-    height: 100%;
-    width: 40%;
-}
-
-.info .text{
-    color: white;
-    font-size: 1.3em;
-    font-family: 'Joan', sans-serif;
-}
-
-.infoMenu{
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 100%;
-    box-shadow: 1px 1px 5px black;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -86,7 +65,6 @@ h1{
     gap: 2em;
 }
 
-.infoMenu img{
-    height: 180px;
-    width: 180px;
+.info div{
+    border: 1px solid white;
 }
